# annotated-s4

./: pyproject.toml  requirements-mps.txt  s4.ipynb  slides.md
s4/: dss.py  memory_bug.py  s4d.py  train.py
tests/: test_metal.py
